--- a/news.css
+++ b/news.css
@@ -1,8 +1,8 @@
 .row{
     padding: 20px 0;
 }
-.navbar-brand{
-    background-color:#5D5FEF ;
-    padding: 6px;
+  /* .navbar-brand{
+     background-color:#5D5FEF ;
+    padding: 6px; 
 
-}
+}  */
